--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<h1>Welcome to the Unknown Horizons website!</h1>
+---
+layout: frontpage
+title: Unknown Horizons - Open-Source Real-Time Strategy Game
+description: Unknown Horizons is a open-source real-time strategy game.
+active: home
+---
+      <!-- Jumbotron -->
+      <div class="jumbotron">
+        <img src="images/uh.png"/>
+        <p class="lead">Unknown Horizons is a 2D realtime strategy simulation with an emphasis on economy and city building. Expand your small settlement to a strong and wealthy colony and supply your inhabitants with valuable goods.</p>
+        <p><a class="btn btn-lg btn-success" href="http://getbootstrap.com/examples/justified-nav/#" role="button">Download now!</a></p>
+      </div>
+
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-lg-4">
+          <h2>Get Help</h2>
+          <p>Need help running <em>Unknown Horizons</em>? Read our FAQ, the most common questions are answered there. Need further help? Join us on IRC: #unknown-horizons @ irc.freenode.net</p>
+          <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons/wiki/FAQ" role="button">View FAQ »</a></p>
+        </div>
+        <div class="col-lg-4">
+          <h2>Get Involved</h2>
+          <p>We are constantly searching for people that are interested in joining the <em>Unknown Horizons</em> development team. We have something for everyone: Graphics, Programming, Game Design, Community Management and much more.</p>
+          <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons/wiki#get-involved" role="button">Read more »</a></p>
+       </div>
+        <div class="col-lg-4">
+          <h2>Open-Source</h2>
+          <p><em>Unknown Horizons</em> is freely available and licensed under open-source licences. The code is available under the <b>GPL v2</b> and content is mostly licenced as <b>CC-BY-SA</b>.</p>
+          <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons" role="button">Fork on Github »</a></p>i
+        </div>
+      </div>
