Small updates to the download page, add note about mac packages

--- a/download.html
+++ b/download.html
@@ -21,5 +21,10 @@ active: download
           <p><b>Debian</b> users can find <em>Unknown Horizons</em> in the official repos:</p>
           <code>sudo aptitude install unknown-horizons</code>
           <p><b>Arch Linux</b> users can find <em>Unknown Horizons</em> in the <a href="https://aur.archlinux.org/packages/unknown-horizons/">AUR</a>.
+          <p><b>Fedora and OpenSUSE</b> users can find <em>Unknown Horizons</em> packages in the <a href="http://software.opensuse.org/package/unknown-horizons">OpenSUSE software directory</a>.
+        </div>
+        <div class="col-lg-4">
+          <h2><i class="fa fa-apple"></i> Mac</h2>
+          <p>Currently no up-to-date <em>Unknown Horizons</em> packages are available for MacOS. If you are interested in helping us build packages for MacOS, please join our IRC channel #unknown-horizons @ irc.freenode.net</p>
         </div>
       </div>
