--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ active: home
       <div class="jumbotron">
         <img src="images/uh.png"/>
         <p class="lead">Unknown Horizons is a 2D realtime strategy simulation with an emphasis on economy and city building. Expand your small settlement to a strong and wealthy colony and supply your inhabitants with valuable goods.</p>
-        <p><a class="btn btn-lg btn-success" href="http://getbootstrap.com/examples/justified-nav/#" role="button">Download now!</a></p>
+        <p><a class="btn btn-lg btn-success" href="/download.html" role="button"><i class="fa fa-download"></i> Download now!</a></p>
       </div>
 
       <!-- Example row of columns -->
