--- a/media.html
+++ b/media.html
@@ -6,5 +6,5 @@ active: media
 ---
     <!-- Example row of columns -->
     <h1>Videos</h1>
-    {% youtube AXQDPVN49no %}
-    {% youtube y6t8AdHCR5o %}
+     <iframe width="560" height="420" src="http://www.youtube.com/embed/AXQDPVN49no?color=white&theme=light"></iframe>
+    <iframe width="560" height="420" src="http://www.youtube.com/embed/y6t8AdHCR5o?color=white&theme=light"></iframe>
