Use html5 player

--- a/media.html
+++ b/media.html
@@ -5,6 +5,7 @@ description: Unknown Horizons videos and screenshots
 active: media
 ---
     <!-- Example row of columns -->
-    <h1>Videos</h1>
-     <iframe width="560" height="420" src="http://www.youtube.com/embed/AXQDPVN49no?color=white&theme=light"></iframe>
-    <iframe width="560" height="420" src="http://www.youtube.com/embed/y6t8AdHCR5o?color=white&theme=light"></iframe>
+    <h1><i class="fa fa-video-camera"></i> Videos</h1>
+    <iframe width="560" height="420" src="http://www.youtube.com/embed/AXQDPVN49no?color=white&theme=light&html5=1"></iframe>
+    <iframe width="560" height="420" src="http://www.youtube.com/embed/y6t8AdHCR5o?color=white&theme=light&html5=1"></iframe>
+    <p>The videos on this site have not been created by the <em>Unknown Horizons</em> team. Thanks to the original authors who created them!</p>
