Make frontpage more awesome using fontawesome

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@ active: home
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>Get Help</h2>
+          <h2><i class="fa fa-question-circle"></i> Get Help</h2>
           <p>Need help running <em>Unknown Horizons</em>? Read our FAQ, the most common questions are answered there. Need further help? Join us on IRC: #unknown-horizons @ irc.freenode.net</p>
           <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons/wiki/FAQ" role="button">View FAQ »</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Get Involved</h2>
+          <h2><i class="fa fa-users"></i> Get Involved</h2>
           <p>We are constantly searching for people that are interested in joining the <em>Unknown Horizons</em> development team. We have something for everyone: Graphics, Programming, Game Design, Community Management and much more.</p>
           <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons/wiki#get-involved" role="button">Read more »</a></p>
        </div>
         <div class="col-lg-4">
-          <h2>Open-Source</h2>
+          <h2><i class="fa fa-dot-circle-o"></i> Open-Source</h2>
           <p><em>Unknown Horizons</em> is freely available and licensed under open-source licences. The code is available under the <b>GPL v2</b> and content is mostly licenced as <b>CC-BY-SA</b>.</p>
-          <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons" role="button">Fork on Github »</a></p>i
+          <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons" role="button"><i class="fa fa-code-fork"></i> Fork on Github</a></p>i
         </div>
       </div>
