--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ active: home
           <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons/wiki#get-involved" role="button">Read more »</a></p>
        </div>
         <div class="col-lg-4">
-          <h2><i class="fa fa-dot-circle-o"></i> Open-Source</h2>
+          <h2><i class="fa fa-cogs"></i> Open-Source</h2>
           <p><em>Unknown Horizons</em> is freely available and licensed under open-source licences. The code is available under the <b>GPL v2</b> and content is mostly licenced as <b>CC-BY-SA</b>.</p>
           <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons" role="button"><i class="fa fa-code-fork"></i> Fork on Github</a></p>i
         </div>
