Add support page

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ active: home
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2><i class="fa fa-question-circle"></i> Get Help</h2>
+          <h2><i class="fa fa-question-circle"></i> Support</h2>
           <p>Need help running <em>Unknown Horizons</em>? Read our FAQ, the most common questions are answered there. Need further help? Join us on IRC: #unknown-horizons @ irc.freenode.net</p>
-          <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons/wiki/FAQ" role="button">View FAQ »</a></p>
+          <p><a class="btn btn-primary" href="/support.html" role="button">Get Help »</a></p>
         </div>
         <div class="col-lg-4">
           <h2><i class="fa fa-users"></i> Get Involved</h2>
