Remove stray letter

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ active: home
         <div class="col-lg-4">
           <h2><i class="fa fa-cogs"></i> Open-Source</h2>
           <p><em>Unknown Horizons</em> is freely available and licensed under open-source licences. The code is available under the <b>GPL v2</b> and content is mostly licenced as <b>CC-BY-SA</b>.</p>
-          <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons" role="button"><i class="fa fa-code-fork"></i> Fork on Github</a></p>i
+          <p><a class="btn btn-primary" href="https://github.com/unknown-horizons/unknown-horizons" role="button"><i class="fa fa-code-fork"></i> Fork on Github</a></p>
         </div>
       </div>
