Update Ubuntu dl instructions.

--- a/download.html
+++ b/download.html
@@ -16,8 +16,11 @@ active: download
         <div class="col-lg-4">
           <h2><i class="fa fa-linux"></i> Linux</h2>
           <p>We provide packages for many linux distributions:</p>
-          <p><b>Ubuntu</b> users can find <em>Unknown Horizons</em> in the official app directory:</p>
-          <p><a class="btn btn-primary" href="https://apps.ubuntu.com/cat/applications/unknown-horizons/" role="button"><i class="fa fa-download"></i> Install Unknown Horizons on Ubuntu</a></p>
+					<p><b>Ubuntu & Linux Mint</b> users should install <em>Unknown Horizons</em> via this <a href="https://launchpad.net/~christoph-egger/+archive/unknown-horizons">PPA</a>.</p>
+					<p> Add the PPA:</p>
+					<code>sudo add-apt-repository ppa:christoph-egger/unknown-horizons</code>
+					<p>Install <em>Unknown Horizons</em>:</p>
+					<code>sudo apt-get update && sudo apt-get install unknown-horizons</code>
           <p><b>Debian</b> users can find <em>Unknown Horizons</em> in the official repos:</p>
           <code>sudo aptitude install unknown-horizons</code>
           <p><b>Arch Linux</b> users can find <em>Unknown Horizons</em> in the <a href="https://aur.archlinux.org/packages/unknown-horizons/">AUR</a>.
