Add alert message about server status.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ title: Unknown Horizons - Open-Source Real-Time Strategy Game
 description: Unknown Horizons is a open-source real-time strategy game.
 active: home
 ---
+			<div class="alert alert-danger">
+    		<p><strong>This is a backup site!</strong> Our original server had a hardware failure and will be available soon again.</p>
+    	</div>
+
       <!-- Jumbotron -->
       <div class="jumbotron">
         <img src="images/uh.png"/>
